Feat(faq): Updates FAQ content and styles
Adds new FAQ entries related to the 2026 event,
Bassblyten stage, music genres, and sustainability efforts.
Updates the answer to existing questions regarding camping,
safe spaces and accessibility.

Introduces the "Mitmachen" page and navigation item to
recruit crew members for the festival. Renames "Gallery"
to "Mitmachen" in the footer navigation.

Updates contact email in Impressum and Kontakt page.
Adds new style for soft lists in the FAQ section.
Updates text on landing and about pages.

--- a/src/app/pages/about/about.component.html
+++ b/src/app/pages/about/about.component.html
@@ -127,13 +127,17 @@
       <h4>Duschen</h4>
       <p>
         Auch die Duschen werden vorerst kostenpflichtig sein. Da vor Ort keine feste
-        Wasserinfrastruktur vorhanden ist, arbeiten wir aktuell mit externen Lösungen, die nur über
-        eine Flatrate realisierbar sind.
+        Wasserinfrastruktur vorhanden ist, arbeiten wir aktuell mit externen Lösungen, die dieses
+        Jahr nur über eine Flatrate realisierbar sind.
       </p>
     </article>
     <article class="card">
       <h4>Ausblick</h4>
-      <p>Für kommende Jahre arbeiten wir bereits an besseren und nachhaltigeren Alternativen.</p>
+      <p>
+        Für kommende Jahre arbeiten wir bereits an besseren und nachhaltigeren Alternativen. Geplant
+        sind nachhaltigere Toiletten, sowie Mehrweg- und Ressourcenkonzepte, die den ökologischen
+        Fußabdruck des Festivals messbar senken.
+      </p>
     </article>
   </div>
 </section>
