--- a/src/app/pages/impressum/impressum.component.html
+++ b/src/app/pages/impressum/impressum.component.html
@@ -7,28 +7,28 @@
     <article class="card">
       <h3>Betreiber</h3>
       <p>
-        Bachblyten Festival Kollektiv UG (haftungsbeschränkt)<br>
-        Am Flugplatz 1<br>
+        Bachblyten Festival Kollektiv UG (haftungsbeschränkt)<br />
+        Am Flugplatz 1<br />
         25813 Schwesing
       </p>
       <p>
-        Vertretungsberechtigt: Lea Thomsen, Malik Arvidsen<br>
-        Kontakt: hallo@bachblyten-festival.com · +49 (0) 4841 123456
+        Vertretungsberechtigt: Lea Thomsen, Malik Arvidsen<br />
+        Kontakt: info@bachblyten-festival.com · +49 (0) 4841 123456
       </p>
     </article>
     <article class="card">
       <h3>Registerdaten</h3>
       <p>
-        Registergericht: Amtsgericht Flensburg<br>
-        Registernummer: HRB 123456<br>
-        USt-IdNr.: DE999999999<br>
+        Registergericht: Amtsgericht Flensburg<br />
+        Registernummer: HRB 123456<br />
+        USt-IdNr.: DE999999999<br />
         Aufsichtsbehörde: Kreis Nordfriesland (falls erforderlich)
       </p>
     </article>
     <article class="card">
       <h3>Redaktionell Verantwortlich</h3>
       <p>
-        Bachblyten Media Team<br>
+        Bachblyten Media Team<br />
         E-Mail: media@bachblyten-festival.com
       </p>
     </article>
