--- a/src/app/pages/landing/landing.component.html
+++ b/src/app/pages/landing/landing.component.html
@@ -57,12 +57,12 @@
         <li>Reminders für Anreise, Timetable und Camping.</li>
         <li>Exklusive Aftermovie-Links.</li>
         <li>Umfragebogen nach dem Festival.</li>
-        <li>Ticketverkaufs start für 2027.</li>
+        <li>Ticketverkaufsstart für 2027.</li>
       </ul>
       <div class="chip-row">
         <span class="pill">Timetable</span>
-        <span class="pill"> Aftermovie</span>
-        <span class="pill">Ticketsale</span>
+        <span class="pill">Aftermovie</span>
+        <span class="pill">Ticketverkauf</span>
       </div>
     </div>
     <div class="newsletter-card card">
