--- a/src/app/pages/line-up/line-up.component.html
+++ b/src/app/pages/line-up/line-up.component.html
@@ -18,12 +18,16 @@
 <section class="section artist-days">
   <div class="section-heading">
     <span class="eyebrow">Programm</span>
-    <h3>Days & Slots</h3>
+    <h3>Line-Up: TBA</h3>
   </div>
   <div class="days">
-    <div class="day" *ngFor="let day of ['Freitag', 'Samstag', 'Sonntag']">
-      <div class="card artist" *ngFor="let artist of artistsByDay(day)">
-        <app-artist-visual class="artist-visual" [alt]="artist.name"></app-artist-visual>
+    <div class="day">
+      <div class="card artist" *ngFor="let artist of randomizedArtists">
+        <app-artist-visual
+          class="artist-visual"
+          [alt]="artist.name"
+          [src]="artist.image"
+        ></app-artist-visual>
 
         <div class="row">
           <div>
