feat(line-up): Adds profile popover component
Implements a profile popover component to display artist profiles, improving user experience by providing more detailed information on hover and focus.

Replaces simple text display with the new component in the line-up page.

--- a/src/app/pages/line-up/line-up.component.html
+++ b/src/app/pages/line-up/line-up.component.html
@@ -60,7 +60,7 @@
               <span class="pill">{{ artist.stage }}</span>
             </div>
 
-            <p class="muted">{{ artist.profile }}</p>
+            <app-profile-popover [text]="artist.profile"></app-profile-popover>
           </div>
         </div>
         <div class="links" *ngIf="artist.links?.length">
