feat(line-up): Updates line-up design
Enhances the line-up page design with updated styling, content, and a new ticket button.

- Sets base href and deploy URL for production build.
- Modifies footer styles, adjusts footer radial gradient.
- Refactors spark button to support dynamic background images.
- Updates image paths and stage descriptions in lineup data.

--- a/src/app/components/spark-button/spark-button.component.html
+++ b/src/app/components/spark-button/spark-button.component.html
@@ -5,12 +5,17 @@
   </span>
 </ng-template>
 
-<a *ngIf="routerLink; else plainButton" class="spark-btn" [routerLink]="routerLink">
+<a
+  *ngIf="routerLink; else plainButton"
+  class="spark-btn"
+  [routerLink]="routerLink"
+  [style.background-image]="sparkTexture"
+>
   <ng-container *ngTemplateOutlet="sparkContent"></ng-container>
 </a>
 
 <ng-template #plainButton>
-  <button class="spark-btn" type="button">
+  <button class="spark-btn" type="button" [style.background-image]="sparkTexture">
     <ng-container *ngTemplateOutlet="sparkContent"></ng-container>
   </button>
 </ng-template>
